--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "prisma": "5.16.1",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "@types/react": "18.3.3",
+    "@types/node": "20.14.10"
   }
 }
