--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prisma": "5.16.1",
     "typescript": "5.4.5",
     "@types/react": "18.3.3",
-    "@types/node": "20.14.10"
+    "@types/node": "20.14.10",
+    "@types/pg": "8.6.6"
   }
 }
