--- a/package.json
+++ b/package.json
@@ -2,27 +2,26 @@
   "name": "rumble-pl",
   "version": "1.2.0",
   "private": true,
-  "engines": {
-    "node": ">=18 <23"
-  },
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && npx prisma migrate deploy && next build",
-    "start": "next start"
+    "build": "npx prisma generate && next build",
+    "start": "next start",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "5.16.1",
-    "date-fns-tz": "3.1.3",
     "next": "14.2.4",
+    "pg": "8.11.3",
     "react": "18.3.1",
-    "pg": "^8.11.3"
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "prisma": "5.16.1",
-    "typescript": "5.4.5",
-    "@types/react": "18.3.3",
     "@types/node": "20.14.10",
-    "@types/pg": "8.6.6"
+    "@types/react": "18.3.3",
+    "prisma": "5.16.1",
+    "typescript": "5.4.5"
+  },
+  "engines": {
+    "node": ">=18 <23"
   }
 }
