--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.2.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "npx prisma generate && npx prisma migrate deploy && next build",
-    "start": "next start",
-    "postinstall": "prisma generate"
-  },
+  "dev": "next dev",
+  "build": "npx prisma generate && npx prisma db push && next build",
+  "start": "next start",
+  "postinstall": "prisma generate"
+},
   "dependencies": {
     "@prisma/client": "5.16.1",
     "next": "14.2.4",
