--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "14.2.4",
     "pg": "8.11.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "date-fns": "3.6.0",
+    "date-fns-tz": "2.0.0"
   },
   "devDependencies": {
     "@types/node": "20.14.10",
