--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "pg": "8.11.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "date-fns": "3.6.0",
-    "date-fns-tz": "2.0.0"
+    "date-fns": "3.6.0"
   },
   "devDependencies": {
     "@types/node": "20.14.10",
