--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
     "prisma": "5.16.1",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "@types/pg": "^8.11.6"
   },
   "engines": { "node": ">=18 <23" }
 }
