--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@types/react": "18.3.3",
     "prisma": "5.16.1",
     "typescript": "5.4.5",
-    "@types/pg": "^8.11.6"
+    "@types/pg": "^8.11.6",
+    "tailwindcss": "^3.4.7",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.16"
   },
   "engines": { "node": ">=18 <23" }
 }
