--- a/package.json
+++ b/package.json
@@ -3,28 +3,31 @@
   "version": "1.2.0",
   "private": true,
   "scripts": {
-  "dev": "next dev",
-  "build": "npx prisma generate && npx prisma db push && next build",
-  "start": "next start",
-  "postinstall": "prisma generate"
-},
+    "dev": "next dev",
+    "build": "npx prisma generate && npx prisma db push && next build",
+    "start": "next start",
+    "postinstall": "prisma generate"
+  },
   "dependencies": {
     "@prisma/client": "5.16.1",
-    "next": "14.2.4",
+    "bcryptjs": "^3.0.2",
+    "date-fns": "3.6.0",
+    "next": "^14.2.31",
     "pg": "8.11.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "date-fns": "3.6.0"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@types/node": "20.14.10",
-    "@types/react": "18.3.3",
-    "prisma": "5.16.1",
-    "typescript": "5.4.5",
     "@types/pg": "^8.11.6",
-    "tailwindcss": "^3.4.7",
+    "@types/react": "18.3.3",
+    "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "prisma": "5.16.1",
+    "tailwindcss": "^3.4.7",
+    "typescript": "5.4.5"
   },
-  "engines": { "node": ">=18 <23" }
+  "engines": {
+    "node": ">=18 <23"
+  }
 }
