--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "postcss": "^8.4.31",
     "prisma": "5.16.1",
     "tailwindcss": "^3.4.7",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "prisma": "5.16.1"
   },
   "engines": {
     "node": ">=18 <23"
