--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL= "mysql://root:KovuBiPLUJZMtmDwOlnBKgVBqJLpxmrd@caboose.proxy.rlwy.net:12023/railway?sslaccept=strict"
+DATABASE_URL= "mysql://root:KovuBiPLUJZMtmDwOlnBKgVBqJLpxmrd@caboose.proxy.rlwy.net:12023/railway?sslaccept=accept_invalid_hostnames"
