--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && npx prisma db push && next build",
+    "build": "next build",
     "start": "next start",
     "postinstall": "prisma generate"
   },
@@ -12,8 +12,7 @@
     "@prisma/client": "5.16.1",
     "bcryptjs": "^3.0.2",
     "date-fns": "3.6.0",
-    "next": "^14.2.31",
-    "pg": "8.11.3",
+    "next": "14.2.31",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
@@ -25,17 +24,9 @@
     "postcss": "^8.4.31",
     "prisma": "5.16.1",
     "tailwindcss": "^3.4.7",
-    "typescript": "5.4.5",
-    "prisma": "5.16.1"
+    "typescript": "5.4.5"
   },
   "engines": {
     "node": ">=18 <23"
-  }
-},
-
-{
-  "scripts": {
-    "postinstall": "prisma generate",
-    "build": "next build"
   }
 }
