--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "seed": "prisma db seed"
   },
   "prisma": {
     "seed": "ts-node --transpile-only prisma/seed.ts"
@@ -27,7 +28,8 @@
     "postcss": "^8.4.31",
     "prisma": "5.16.1",
     "tailwindcss": "^3.4.7",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "ts-node": "^10.9.2"
   },
   "engines": {
     "node": ">=18 <23"
