--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL= "mysql://root:KovuBiPLUJZMtmDwOlnBKgVBqJLpxmrd@caboose.proxy.rlwy.net:12023/railway?sslaccept=accept_invalid_hostnames"
+mysql://root:fsUzLTIoPYBuEtRdebqVBaVSYmUmjmZd@mainline.proxy.rlwy.net:59177/railway?sslaccept=accept_invalid_hostnames
