--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "crons": [
-    { "path": "/api/admin/reports/generate", "schedule": "0 * * * *" } // hourly
+    { "path": "/api/admin/reports/generate", "schedule": "0 * * * *" }
   ]
 }
