--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "crons": [
-    { "path": "/api/admin/reports/generate", "schedule": "0 * * * *" }
+    {
+      "path": "/api/admin/reports/generate",
+      "schedule": "0 5 * * *"
+    }
   ]
 }
