--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "devDependencies": {
     "@types/node": "20.14.10",
     "@types/pg": "^8.11.6",
-    "@types/react": "18.3.3",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "prisma": "5.16.1",
