--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.16.1",
+    "@resvg/resvg-js": "^2.6.2",
     "bcryptjs": "^3.0.2",
     "date-fns": "3.6.0",
     "next": "14.2.31",
@@ -30,8 +31,8 @@
     "postcss": "^8.4.31",
     "prisma": "5.16.1",
     "tailwindcss": "^3.4.7",
-    "typescript": "5.4.5",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "5.4.5"
   },
   "engines": {
     "node": ">=18 <23"
