--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@prisma/client": "5.16.1",
     "@resvg/resvg-js": "^2.6.2",
+    "@resvg/resvg-wasm": "^2.6.0",
     "bcryptjs": "^3.0.2",
     "date-fns": "3.6.0",
     "next": "14.2.31",
