--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["*"],
-      "@/src/*": ["src/*"]
+      "@/src/*": ["src/*"],
+      "@/lib/*": ["src/lib/*"]
     },
     "types": ["node"]
   },
