--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["*"],
-      "@/src/*": ["src/*"],
-      "@/lib/*": ["src/lib/*"]
+      "@/src/*": ["src/*"]
     },
     "types": ["node"]
   },
